  - equals, compareTo, Period construction

- Period.toString(PeriodFormatter), MutablePeriod.toString(PeriodFormatter)
  - allow periods to be directly formatted, as with datetimes

- DateTimeZone
  - add isStandardOffset()
  assists in determining if DST applies

- Interval
  - add (long,long,DateTimeZone) constructor
  constructor emphasises that intervals include a time zone


Compatibility with 1.4
----------------------
Binary compatible - Yes, except
  Internal class LenientDateTimeField has an incompatible change to
  getInstance() and the constructor

Source compatible - Yes, except
  Internal class LenientDateTimeField has an incompatible change to
  getInstance() and the constructor

Serialization compatible - Yes

Data compatible - Yes, except
  - Format of time zone data files changed slightly to fix bug
    This mainly affects Australia
  - DateTimeZone data updated to version 2007f

Semantic compatible - Yes


Deprecations since 1.4
----------------------
- LocalDate
  - toDateTimeAtMidnight(), toDateTimeAtMidnight(DateTimeZone)
    use toDateTimeAtStartOfDay() instead because it avoids exceptions


Bug fixes since 1.4
-------------------
- Daylight savings cutover in Spring incorrect
  A problem with DST cutover in Spring meant that the result of many
  methods would be different depending on whether the time zone was in the
  Eastern or Western hemisphere. Now, the DST cutover is consistent, such
  that if a time is requested within the cutover, it will be pushed forwards
  into summer time. [1710316, 1747219, 1755158]

- LenientChronology and time zones
  LenientChronology could throw exceptions when the time being created
  didn't exist dies to the time zone [1755161]

- LocalDate/LocalTime constructors did not set internal state correctly
  This problem was exposed when Days.daysBetween() and similar methods
  failed to give the right results

- Period.plusXxx(), minusXxx(), withXxx()