@@ -166,6 +166,9 @@
     <contributor>
       <name>Maxim Zhao</name>
     </contributor>
+    <contributor>
+      <name>Ryan Propper</name>
+    </contributor>
   </contributors>
 
   <dependencies>
